--- a/style.css
+++ b/style.css
@@ -1,20 +1,34 @@
 body {
   text-align: center;
+  background: #e2bece;
 }
-h1 {
+body {
   text-align: center;
   color: #660533;
 }
+h1 {
+  font-weight: bolder;
+}
+h2 {
+  font-weight: normal;
+}
 #email {
-  border-radius: 10px;
+  border-radius: 5px;
   color: #300036;
 }
 #pswd {
-  border-radius: 20px;
+  border-radius: 5px;
   color: #300036;
 }
 .btn {
-  color: fuchsia;
+  color: #fff;
+  background-color: #660533;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.btn:hover {
+  color: #660533;
+  background-color: #fff;
 }
 img {
   display: block;
